SeminarCD_TVB/infra/k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app.kubernetes.io/part-of: travel-tvb
    environment: production
